# rust-ecs

./: Cargo.toml
data/materials/: capsule.mtl
src/: entity.rs  macros.rs  main.rs  world.rs
src/components/: component.rs  renderable.rs
src/graphics/: camera.rs  material.rs  mesh.rs  mod.rs  obj.rs  texture.rs
src/system/: physics_system.rs  render_system.rs  system.rs
